# liblingua

./: .env.example  .gitignore  API.md  BACKUP_STRATEGY.md  DATABASE_OPTIMIZATION.md  DEPLOY.md  DEPLOYMENT.md  MONITORING.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY_AUDIT.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: backend-tests.yml  frontend-tests.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  package-lock.json  package.json
backend/__mocks__/: uuid.js
backend/__tests__/helpers/: createApp.js  fixtures.js
backend/__tests__/security/: 01-auth.security.test.js  02-authorization.security.test.js  03-headers.security.test.js  04-input-validation.security.test.js  05-upload.security.test.js  06-sensitive-data.security.test.js
backend/prisma/: schema.prisma
backend/scripts/: import_hf_dataset.py
backend/src/: index.js
backend/src/__tests__/: auth.test.js  authController.test.js  authMiddleware.test.js  bulkImport.test.js  exportService.test.js  health.test.js  jwt.test.js  sampleService.test.js  samples.test.js  similarity.test.js  (+3 more)
frontend/: .env.example  Dockerfile  Dockerfile.dev  cypress.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: export.js  seed.js
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/liberiandata/: __init__.py  client.py  exceptions.py
sdk/python/liblingua/: __init__.py  client.py  exceptions.py
(+103 files in other folders)
