[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "liblingua"
version = "1.0.0"
description = "Official Python SDK for the liblingua platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[tool.setuptools]
packages = ["liblingua"]

[project.optional-dependencies]
pandas     = ["pandas>=1.3"]
huggingface = ["datasets>=2.0"]
all        = ["pandas>=1.3", "datasets>=2.0"]

[project.urls]
Homepage   = "https://github.com/your-org/liblingua"
Repository = "https://github.com/your-org/liblingua"
